# pico-usb-sniffer-lite

./: README.md
firmware/: .gitignore  CMakeLists.txt  pico_usb_sniffer_lite.c  pico_usb_sniffer_lite.pio
